--- a/web/admin-panel-frontend/.env
+++ b/web/admin-panel-frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_ENDPOINT=http://localhost:3000/
+REACT_APP_API_ENDPOINT=https://tagsafe-nit-agartala-project-2024.onrender.com/
 REACT_APP_NPR_API_ENDPOINT=https://32fa-49-38-253-171.ngrok-free.app/all
